Fixed sound (SID_SDL.i is no longer needed)

--- a/Src/Makefile
+++ b/Src/Makefile
@@ -100,7 +100,7 @@ CIA_SC.o: CIA_SC.cpp CIA.h CPUC64.h CPU1541.h VIC.h Prefs.h
 main.o: sysdeps.h sysconfig.h main.h C64.h Display.h Prefs.h SAM.h main_x.i
 Display.o: sysdeps.h sysconfig.h Display.h main.h Prefs.h Display_SDL.i
 Prefs.o: sysdeps.h sysconfig.h Prefs.h Display.h C64.h main.h
-SID.o: sysdeps.h sysconfig.h SID.h Prefs.h SID_SDL.i
+SID.o: sysdeps.h sysconfig.h SID.h Prefs.h SID_linux.i
 REU.o: sysdeps.h sysconfig.h REU.h CPUC64.h C64.h Prefs.h
 IEC.o: sysdeps.h sysconfig.h IEC.h 1541fs.h 1541d64.h 1541t64.h Prefs.h
 IEC.o: Display.h
