Simplified faking key sequences and do this through the virtual keyboard

--- a/Src/Makefile
+++ b/Src/Makefile
@@ -132,6 +132,7 @@ sysconfig.h: sysconfig.h.Host-SDL
 main.o: sysdeps.h sysconfig.h main.h C64.h Display.h Prefs.h SAM.h
 main.o: Basic_ROM.h Kernal_ROM.h Char_ROM.h 1541_ROM.h
 Display.o: sysdeps.h sysconfig.h Display.h main.h Prefs.h Display_SDL.h
+Display_SC.o: sysdeps.h sysconfig.h Display.h main.h Prefs.h Display_SDL.h
 Prefs.o: sysdeps.h sysconfig.h Prefs.h Display.h C64.h main.h
 SID.o: sysdeps.h sysconfig.h SID.h Prefs.h
 REU.o: sysdeps.h sysconfig.h REU.h CPUC64.h C64.h Prefs.h
