Remove sysconfig.h dependency for the host as well, and skip it on wii clean

--- a/Makefile.wii
+++ b/Makefile.wii
@@ -111,7 +111,7 @@ $(BUILD):
 #---------------------------------------------------------------------------------
 clean:
 	@echo clean ...
-	@rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT).dol Src/sysconfig.h Src/*.o \
+	@rm -fr $(BUILD) $(OUTPUT).elf $(OUTPUT).dol Src/*.o \
           FrodoSC FrodoPC dist
 
 dist: $(BUILD)
